--- a/style.css
+++ b/style.css
@@ -752,6 +752,7 @@ padding: 0px 60px 150px;
 }
 
 /* ==================================================== */
+/* ==================================================== */
 /* --- FINAL POLISH: FIX LINKS & IMAGES --- */
 /* ==================================================== */
 
